@@ -105,7 +105,8 @@ template<typename O> send(string serviceName, O options)
   - [ ] This graph could highlight in red circular dependencies
 - [ ] Could update automatically installed plugins with the use
   of Rainbrurpg's Extension Repository (a foswiki web)
-**** Implement dependency graph in C++
+**** TODO Implement dependency graph in C++
+     CLOCK: [2013-10-07 lun. 21:21]--[2013-10-07 lun. 22:46] =>  1:25
      CLOCK: [2013-10-07 lun. 18:22]--[2013-10-07 lun. 19:17] =>  0:55
      CLOCK: [2013-10-07 lun. 10:09]--[2013-10-07 lun. 10:56] =>  0:47
      CLOCK: [2013-10-06 dim. 22:19]--[2013-10-06 dim. 23:25] =>  1:06
