@@ -10,21 +10,20 @@ struct Printer : public boost::static_visitor<> {
     void operator()(Time a) const {
         printf("Hour: %d, Minute: %d, Second: %d\n", a.hour, a.minute, a.second);
     }
-    void operator()(WikiWord a) const {
-        printf("Wikiword: %c\n", a.content);
+  void operator()(std::string a) const {
+    std::cout << "WikiWord is '" << a << "'" << std::endl; 
     }
 };
 
 int main() {
-    std::string s;
-    std::getline(std::cin, s);
-    Iterator beg = s.begin(), end = s.end();
-    WikiWord ret;
-    phrase_parse(beg, end, WikiWordParser(), ascii::space, ret);
-    if (beg != end)
-        puts("Parse failed.");
-    else
-      puts("Parse succeed!");
- 
-%   boost::apply_visitor(Printer(), ret);
+  std::string s;
+  std::getline(std::cin, s);
+  Iterator beg = s.begin(), end = s.end();
+ std:string ret;
+  phrase_parse(beg, end, WikiWordParser(), ascii::space, ret);
+  if (beg != end)
+    puts("Parse failed.");
+  else
+    std::cout << "WikiWord is '" << ret << "'" << std::endl; 
+  //  boost::apply_visitor(Printer(), ret);
 }
